tests/parsing/cmc/errors/167.expected
File "tests/parsing/cmc/errors/167.cmc", line 1, character 13-14:
1 | (check-system)
                 ^
Error while parsing a check system command, read a closing parenthesis,
      but expected a symbol corresponding to a defined system.
